2006-01-13  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* src/gdict-applet.c (gdict_applet_set_menu_sensitive),
	(gdict_applet_lookup_start_cb), (gdict_applet_lookup_end_cb),
	(gdict_applet_error_cb), (gdict_applet_init): add a function
	to make the menu items sensitive.

	* src/gdict-applet.c (gdict_applet_style_set): re-compute the
	definition window size request depending on the font size at every
	style change.

	* src/gdict-applet.c (gdict_applet_draw), (gdict_applet_init),
	(gdict_applet_build_window): remove the warnings (they wouldn't be
	displayed anyway) and use error dialogs; mark new strings as
	translatable; add tooltips for the applet widgets.

2006-01-12  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* libgdict/Makefile.am: fixed the enum generation.

2006-01-11  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* data/GNOME_DictionaryApplet.xml: change the mnemonic for the "Clear"
	verb.

	* src/gdict-applet.c (gdict_applet_lookup_end_cb),
	(gdict_applet_error_cb), (gdict_applet_init): check before changing the
	menu items' sensivity; this should fix the crasher in bug #326004.

2006-01-11  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* data/gnome-dictionary.schemas.in: add the new window state keys:
		default-window-height
		default-window-width
		window-is-maximized
	these keys will store the window state across sessions.

	* libgdict/Makefile.am: fix a bug that prevented the right inclusion
	of the headers inside the auto-generated gdict-enum-types.h header
	file.

	* src/gdict-applet.c (gdict_applet_build_window): create the window
	showing the defbox using width and height calculated from the font
	size.

	* src/gdict-applet.c (gdict_applet_icon_toggled_cb),
	(gdict_applet_button_press_event_cb),
	(gdict_applet_icon_button_press_event_cb), (gdict_applet_draw),
	(gdict_applet_lookup_start_cb), (gdict_applet_size_allocate): use a
	ToggleButton instead of a plain Image for the dictionary icon; this